# Resume-RAG

./: .deployment  .env_example  .gitignore  README.md  alembic.ini  fix_imports.py  frontend.7z  main.py  package-lock.json  pyproject.toml  replace_prints.py  replace_prints_all.py  requirements.txt  server.py  setup.py  startup.sh  try.py
.github/workflows/: master_hiremind.yml  master_hiremindrg2.yml
.svn/: wc.db
HireMind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_chat_group_messages.py  0003_rename_chat_columns.py  0004_resumes_metadata_table.py  014c2f87fe37_normalize_resume_metadata.py  2189b45b07cd_added_chat_group_id_column_to_history_.py  3a9f89f494b0_added_city_column_to_resume_metadata_.py  84777312b323_new_table_user_resumes_and_changed_old_.py  89497766548b_added_new_column_summarized_history_to_.py  b3f1c4a9d002_drop_domain_from_resumes.py
app/: clients.py  main.py  requirements.txt  try.py
app/api/: auth_routes.py  chat_routes.py  dependencies.py  resume_routes.py  routes.py
app/appvenv/: pyvenv.cfg
app/core/: config.py  database.py  logger.py
app/crud/: chat_crud.py  db_crud.py  resume_crud.py  user_crud.py  user_resumes_crud.py
app/deprecated/: change_filename.py  data_processing.py
app/helpers/: norm_location.py
app/models/: __init__.py  chat_tables.py  resumes.py  (+3 more)
backend/: convert_to_pdf.py  data_processing.py  metadata_filter.py  streamlit_main.py  unique.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+75 files in other folders)
