[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HireMind"
version = "0.1.0"
description = "RAG-based AI resume assistant backend and frontend workspace"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
